payment and delivery and review

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -39,14 +39,14 @@
         <url-pattern>*.wav</url-pattern>
         <url-pattern>*.webm</url-pattern>
     </servlet-mapping>
-   <!-- <error-page>
+    <error-page>
         <error-code>403</error-code>
         <location>/forbiddenErrorPage.jsp</location>
     </error-page>
-    <error-page>
+<!--    <error-page>
         <error-code>404</error-code>
         <location>/notFoundErrorPage.jsp</location>
-    </error-page>
+    </error-page>-->
     <error-page>
         <error-code>500</error-code>
         <location>/serverErrorPage.jsp</location>
@@ -59,7 +59,7 @@
         <exception-type>java.lang.NullPointerException</exception-type>
         <location>/nullErrorPage.jsp</location>
     </error-page>
-    <error-page>
+<!--    <error-page>
         <exception-type>java.lang.Exception</exception-type>
         <location>/errorPage.jsp</location>
     </error-page>-->
